[package]
name = "c2pa-crypto"
version = "0.1.2"
description = "Cryptography internals for c2pa-rs crate"
authors = [
    "Maurice Fisher <mfisher@adobe.com>",
    "Gavin Peacock <gpeacock@adobe.com>",
    "Eric Scouten <scouten@adobe.com>",
    "Leonard Rosenthol <lrosenth@adobe.com>",
    "Dave Kozma <dkozma@adobe.com>",
    "Dylan Ross <dyross@adobe.com>"
]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/c2pa-crypto"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs"
readme = "README.md"
keywords = ["metadata"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.76.0"
exclude = ["tests/fixtures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
json_schema = ["dep:schemars"]
openssl = ["dep:openssl", "_anyssl"]
boringssl = ["dep:boring", "dep:pkcs8", "dep:pkcs1", "_anyssl"]

# Internal-only. Use the `openssl` feature to enable it.
_anyssl = []

[dependencies]
base64 = "0.22.1"
bcder = "0.7.3"
c2pa-status-tracker = { path = "../status-tracker", version = "0.1.0" }
hex = "0.4.3"
rasn = "0.18.0"
rasn-ocsp = "0.18.0"
rasn-pkix = "0.18.0"
schemars = { version = "0.8.21", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
sha1 = "0.10.6"
thiserror = "1.0.61"
x509-certificate = "0.21.0"
x509-parser = "0.16.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
boring = { version = "4.13", optional = true }
pkcs8 = { version = "0.10.2", features = ["std"], optional = true }
pkcs1 = { version = "0.7.5", features = ["pem", "std"], optional = true }
openssl = { version = "0.10.61", features = ["vendored"], optional = true }
ureq = "2.4.0"
url = "2.5.3"

[package.metadata.cargo-udeps.ignore]
normal = ["openssl"] # TEMPORARY: Remove after openssl transition complete.

[dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["wasmbind"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["now", "wasmbind"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait = { version = "0.1.77" }
ecdsa = "0.16.9"
ed25519-dalek = "2.1.1"
p256 = "0.13.2"
p384 = "0.13.0"
rsa = { version = "0.9.6", features = ["sha2"] }
spki = "0.7.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.58", features = [
    "console",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "Window",
    "WorkerGlobalScope",
] }
web-time = "1.1"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
js-sys = "0.3.58"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.31"
