[package]
name = "metadata-parsers"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
# TODO: need?
memchr = "2.7.1"
# TODO: need?
conv = "0.3.3"
# TODO: remove this
tempfile = "3.10.1"
byteorder = { version = "1.4.3", default-features = false }
# TODO: do we need
serde_bytes = { version = "0.11.5", optional = true }
# TODO: temp
serde = { version = "1.0.197", features = ["derive"] }
# TODO: unmaintained
atree = "0.5.2"
fast-xml = { version = "0.23.1", optional = true }
lopdf = { version = "0.31.0", optional = true }
# Version 1.13.0 doesn't compile under Rust < 1.75, pinning to 1.12.0
id3 = { version = "=1.12.0", optional = true }
png_pong = { version = "0.9.1", optional = true }
img-parts = { version = "0.3.0", optional = true }
riff = { version = "1.0.1", optional = true }

[features]
default = [
  "bmff",
  "gif",
  "jpeg",
  "mp3",
  "pdf",
  "png",
  "riff",
  "svg",
  "tiff",
  "xmp",
]
xmp = ["fast-xml"]
bmff = []
gif = []
jpeg = ["img-parts"]
mp3 = ["id3"]
pdf = ["lopdf"]
png = ["png_pong", "img-parts"] # TODO: remove img-parts feature here
riff = ["dep:riff"]
svg = ["fast-xml"]
tiff = []
